fix footer wrapping

--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ nav {
     display: flex;
     justify-content: center;
     gap: 1em;
+    flex-wrap: wrap;
 }
 
 .post {
